objects/APTS_Language_Translation__c.object
<CustomObject>
    <fields>
        <fullName>APTS_ABB_Contact_Name__c</fullName>
        <label>ABB Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ABB_Email_Address__c</fullName>
        <label>ABB Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ABB_Phone_Number__c</fullName>
        <label>ABB Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Activate_Version__c</fullName>
        <formula>IF( 

AND
(APTS_Active_Version__c &lt;&gt; true
) 
, 


HYPERLINK(&apos;/apex/APTS_LTActivateRevise?id=&apos;&amp;Id+&apos;&amp;action=activate&apos;, IMAGE(&apos;/resource/APTS_Activate_Version&apos;, &apos;Activate Version&apos;),&apos;_self&apos;) 
,NULL)</formula>
        <label>Activate Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Active_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Alternative_Items__c</fullName>
        <label>Alternative Items</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Arising_Dispute__c</fullName>
        <label>Arising Dispute</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Attachments__c</fullName>
        <label>Attachments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Current_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Reference_ID__c</fullName>
        <label>Customer Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Days__c</fullName>
        <label>Days</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Delay_in_Delivery_Details__c</fullName>
        <label>Delay in Delivery Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Delivery_Condition__c</fullName>
        <label>Delivery Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Delivery_Term__c</fullName>
        <label>Delivery Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Delivery_Time__c</fullName>
        <label>Delivery Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Export_Control__c</fullName>
        <label>Export Control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Freight_and_Packaging__c</fullName>
        <label>Freight and Packaging</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Further_Information_Description__c</fullName>
        <label>Further Information Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_General_Conditions__c</fullName>
        <label>General Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Introduction_Detailed__c</fullName>
        <inlineHelpText>Page 3 of Long Standard Offer</inlineHelpText>
        <label>Introduction (Detailed)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Introduction__c</fullName>
        <label>Introduction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Liability__c</fullName>
        <label>Liability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Licences_Details__c</fullName>
        <label>Licences Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Number__c</fullName>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Liquidated_damages__c</fullName>
        <label>Liquidated damages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_List_of_Attachments__c</fullName>
        <label>List of Attachments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_List_of_Hyperlinks__c</fullName>
        <label>List of Hyperlinks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_List_of_References__c</fullName>
        <label>List of References</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Locale__c</fullName>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Main_Items__c</fullName>
        <label>Main Items</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Mobile__c</fullName>
        <label>Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Months__c</fullName>
        <label>Months</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Optional_Items__c</fullName>
        <label>Optional Items</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Page__c</fullName>
        <label>Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Condition__c</fullName>
        <label>Payment Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Penalty_Terms__c</fullName>
        <label>Penalty Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Permits_Licences__c</fullName>
        <label>Permits Licences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Product_code_type__c</fullName>
        <label>Product code/type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <label>Quantity*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_For__c</fullName>
        <label>Quotation For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Date__c</fullName>
        <label>Quote Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Revision__c</fullName>
        <label>Quote Revision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_lead_time__c</fullName>
        <label>Quote lead time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_lead_time_detailed__c</fullName>
        <label>Quote lead time detailed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Resolution_Law__c</fullName>
        <label>Resolution &amp; Law</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Revise_Language_Translation__c</fullName>
        <formula>IF(  
APTS_Active_Version__c = True , HYPERLINK(&apos;/apex/APTS_LTActivateRevise?id=&apos;&amp;Id+&apos;&amp;action=revise&apos;, IMAGE(&apos;/resource/APTS_Revise_Language_Translation&apos;, &apos;Revise Language Translation&apos;),&apos;_self&apos;), 
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revise Language Translation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Revised_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revised From</label>
        <referenceTo>APTS_Language_Translation__c</referenceTo>
        <relationshipLabel>Language Translations</relationshipLabel>
        <relationshipName>Language_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Scope_of_Supply__c</fullName>
        <label>Scope of Supply</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Scope_of_offer__c</fullName>
        <label>Scope of offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Special_Penalty_Terms__c</fullName>
        <label>Special Penalty Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Special_Warranty_Terms__c</fullName>
        <label>Special Warranty Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Specific_T_C_Lead_Time__c</fullName>
        <label>Specific T&amp;C Lead Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Table_of_Contents__c</fullName>
        <label>Table of Contents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Tax__c</fullName>
        <label>Tax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Taxes_Details__c</fullName>
        <label>Taxes Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Taxes_and_Duties__c</fullName>
        <label>Taxes and Duties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Telephone__c</fullName>
        <label>Telephone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Terms_and_Condtions__c</fullName>
        <label>Terms and Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Terms_conditions_of_sales__c</fullName>
        <label>Terms &amp; conditions of sales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Price__c</fullName>
        <label>Total Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Total_order_value__c</fullName>
        <label>Total order value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Validity__c</fullName>
        <label>Validity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Validity_of_offer__c</fullName>
        <label>Validity of offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Warranty_Terms__c</fullName>
        <label>Warranty Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Warranty__c</fullName>
        <label>Warranty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Language Translation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Active_Version__c</columns>
        <columns>APTS_Revised_From__c</columns>
        <columns>APTS_Revision__c</columns>
        <columns>APTS_Activate_Version__c</columns>
        <columns>APTS_Valid_From__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Language Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Language Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>